# hackathon_jsons

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.gunicorn.conf.py  server.py  setup.cfg
blueprints/: get_data.py  healthcheck.py  upload_json.py
config/: config.py  env.ini
style_config/: setup.cfg
