[tool.poetry]
name = "hackathon_jsons"
version = "0.1.0"
description = ""
authors = ["Jonasz Lasut <jonasz.lasut@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
redis = "^4.3.3"
Flask = "^2.1.2"
Flask-RESTful = "^0.3.9"
gunicorn = "^20.1.0"
hvac = {extras = ["parser"], version = "^0.11.2"}
requests = "^2.28.0"
hiredis = "^2.0.0"
pottery = "^3.0.0"
ijson = "^3.1.4"
cryptography = "^37.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
fakeredis = "^1.8.1"
poethepoet = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
build = "docker-slim build --http-probe=false --continue-after=1 --dockerfile=Dockerfile --tag=json_parser:latest $PWD"
clean = "docker rmi -f json_parser.fat:latest"
up = "docker-compose up -d"
